--- a/1_Asp.Net_6.0/Pages/Privacy.cshtml
+++ b/1_Asp.Net_6.0/Pages/Privacy.cshtml
@@ -5,4 +5,4 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Xín chào tôi là Một người yêu đời <3</p>
+<p>Xín chào tôi là Một người yêu đời nhưng đời đếch yêu tôi, và tôi vấn yêu đời, do đen nên ko load lại ảo thật đấy</p>
