--- a/Shopping_Application/Views/Home/Privacy.cshtml
+++ b/Shopping_Application/Views/Home/Privacy.cshtml
@@ -1,6 +1,4 @@
-﻿@{
-    ViewData["Title"] = "Privacy Policy";
-}
-<h1>@ViewData["Title"]</h1>
+﻿<h3>Xin chào đây là chương trình truyền tải những thông điệp vui vẻ</h3>
 
-<p>Use this page to detail your site's privacy policy.</p>
+
+<h4>Dữ liệu từ Session @ViewData["SessionData"]</h4>
