--- a/Shopping_Application/Views/Shared/_Layout.cshtml
+++ b/Shopping_Application/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Test">Chỉ Test thôi</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="TransferData">Truyền dữ liệu</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Redirect">Chuyển hướng về em Test</a>
