--- a/Shopping_Application/Views/Shared/_Layout.cshtml
+++ b/Shopping_Application/Views/Shared/_Layout.cshtml
@@ -40,6 +40,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ShowListFromSession">Phương Game</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ShowCart">Hà đi mua đồ nhậu</a>
+                        </li>
                     </ul>
                 </div>
             </div>
